fixed double scroll annoyance

--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -3,5 +3,4 @@
   background-color: rgba(243,245,242,1);
   overflow-x: hidden;
   overflow-y: auto;
-  height: 100%;
 }
